# IELTS-AI

./: README.md  setup.py  start-dev.sh
.serena/: project.yml
.serena/memories/: user-learning-profile.md
backend/: .gitignore  app.db  env.example  ielts_memory.db  main.py  pyproject.toml  requirements.txt
backend/api/: admin.py  auth.py  chat.py  evaluation.py  payment.py
backend/core/: config.py  database.py  security.py
backend/database/: init_db.py
backend/models/: chat.py  essay.py  evaluation.py  payment.py  user.py
backend/services/: ielts_evaluator.py  llm.py  payment_service.py  user_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/Auth/: LoginDialog.jsx  LoginForm.jsx  RegisterDialog.jsx  RegisterForm.jsx
frontend/src/components/Chat/: ChatInput.jsx  ChatWindow.jsx  MessageList.jsx  MobileSidebar.jsx  Sidebar.jsx
frontend/src/components/Common/: FloatingControls.jsx  MobileHeader.jsx
frontend/src/components/Settings/: SettingsDialog.jsx
frontend/src/components/ui/: dialog.jsx
frontend/src/context/: ThemeProvider.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/services/: api.jsx  auth.jsx  payment.jsx
